--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -68,10 +68,10 @@
     padding: 0 1.5rem;
 }
 
-.dialog__acitons {
+.dialog__actions {
     display: flex;
     justify-content: flex-end;
-    gap: 0.5rem;
+    gap: 1.5rem;
 }
 
 @keyframes open-dialog {
