--- a/styles/index.css
+++ b/styles/index.css
@@ -53,7 +53,7 @@ body {
 
     --color-red-600: #dc2626;
 
-    --color-green-600: #16a344a;
+    --color-green-600: #16a34a;
     
     --color-gray-100: #f3f4f6;
     --color-gray-300: #d1d5db;
