--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 @import "./event-detail.css";
 @import "./event-list.css";
 @import "./event.css";
+@import "./fab.css";
 @import "./form.css";
 @import "./input.css";
 @import "./mini-calendar.css";
@@ -71,6 +72,7 @@ body {
 
     --box-shadow-md: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
     0 1px 2px -1px rgba(0, 0, 0, 0.1);
+    --box-shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
 }
 
 .app {
